--- a/dog.html
+++ b/dog.html
@@ -13,7 +13,7 @@
         <div class="row">
             <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#">Приют домашних животных</a>
+                  <a class="navbar-brand" href="index.html">Приют домашних животных</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -50,36 +50,38 @@
               </nav>
         </div>
     </div>
-    <div class="row">
-        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active" id="crsl" data-bs-interval="3000" >
-                <img src="images/Cat.jpeg" class="d-block w-30" alt="...">
-              </div>
-              <div class="carousel-item" id="crsl" data-bs-interval="3000">
-                <img src="images/Cats.jpeg" class="d-block w-30" alt="...">
-              </div>
-              <div class="carousel-item" id="crsl" data-bs-interval="3000">
-                <img src="images/CatWithOrange.jpeg" class="d-block w-30" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+
+    <div class="container" style="margin-top: 10px; margin-left: 240px;">
+
+      <div class="row">
+
+        <div class="card" style="width: 18rem; margin-right: 10px; border-radius: 15px;">
+          <img src="images/Джиззи.jpg" class="card-img-top" alt="" style="border-radius: 10px; height: 175px;">
+          <div class="card-body">
+            <h5 class="card-title">Джиззи</h5>
+            <p class="card-text">Немецкая овчарка</p>
+            <a href="Jizzy.html" class="btn btn-primary">Подробнее</a>
           </div>
+        </div>
+      
+        <div class="card" style="width: 18rem; margin-right: 10px; border-radius: 15px;">
+          <img src="images/Добби.jpg" class="card-img-top" alt="" style="border-radius: 10px; height: 175px;">
+          <div class="card-body">
+            <h5 class="card-title">Добби</h5>
+            <p class="card-text">Доберман</p>
+            <a href="#" class="btn btn-primary">Подробнее</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <img src="images/Джестер.jpeg" class="card-img-top" alt="" style="border-radius: 10px; height: 175px;">
+          <div class="card-body">
+            <h5 class="card-title">Джестер</h5>
+            <p class="card-text">Корги</p>
+            <a href="#" class="btn btn-primary">Подробнее</a>
+          </div>
+        </div>
+      </div>
     </div>
-
-    <div class="row">
-        <div class="alert alert-success" role="alert">
-            A simple success alert—check it out!
-        </div>          
-    </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
