Добавили тестовый файл в ветку pethouse

--- a/dog.html
+++ b/dog.html
@@ -73,7 +73,7 @@
           </div>
         </div>
         <div class="card" style="width: 18rem;">
-          <img src="images/Джестер.jpeg" class="card-img-top" alt="" style="border-radius: 10px; height: 175px;">
+          <img src="images/Джестер.jpg" class="card-img-top" alt="" style="border-radius: 10px; height: 175px;">
           <div class="card-body">
             <h5 class="card-title">Джестер</h5>
             <p class="card-text">Корги</p>
