--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" id="crsl" data-bs-interval="3000" >
-                <img src="images/Cat.jpeg" class="d-block w-30" alt="...">
+                <img src="images/Cat.jpg" class="d-block w-30" alt="...">
               </div>
               <div class="carousel-item" id="crsl" data-bs-interval="3000">
-                <img src="images/Cats.jpeg" class="d-block w-30" alt="...">
+                <img src="images/Cats.jpg" class="d-block w-30" alt="...">
               </div>
               <div class="carousel-item" id="crsl" data-bs-interval="3000">
-                <img src="images/CatWithOrange.jpeg" class="d-block w-30" alt="...">
+                <img src="images/CatWithOrange.jpg" class="d-block w-30" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
