--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                         </ul>
                       </li>
                         <li class="nav-item active">
-                          <a class="nav-link active" aria-current="page" href="contact.html">Обратная связь</a>
+                            <a class="nav-link active" aria-current="page" href="contact.html">Обратная связь</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
@@ -49,37 +49,38 @@
                 </div>
               </nav>
         </div>
-    </div>
+    
+
     <div class="row">
-        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active" id="crsl" data-bs-interval="3000" >
-                <img src="images/Cat.jpg" class="d-block w-30" alt="...">
-              </div>
-              <div class="carousel-item" id="crsl" data-bs-interval="3000">
-                <img src="images/Cats.jpg" class="d-block w-30" alt="...">
-              </div>
-              <div class="carousel-item" id="crsl" data-bs-interval="3000">
-                <img src="images/CatWithOrange.jpg" class="d-block w-30" alt="...">
-              </div>
+        <p>Наш приют помогает животным</p>
+    </div>
+
+    <div class="row">
+        <form action="https://yandex.ru" method="post"> 
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">Как к Вам обращаться?</label>
+              <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Заполните Ваше ФИО">
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
+            <div class="mb-3">
+              <label for="exampleInputPassword1" class="form-label">Ваш телефон</label>
+              <input type="tel" class="form-control" id="exampleInputPassword1">
+            </div>
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Когда Вам перезвонить</label>
+                <input type="date" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              </div>
+              <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Email</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              </div>
+                
+            <button type="submit" class="btn btn-primary">Отправить</button>
+            <div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d984.5820333106649!2d42.12660926797984!3d57.437650556053484!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x41529277635abe75%3A0x463fd10650941e76!2z0JHQuNC70LDQudC9LiDQmNC90YLQtdGA0L3QtdGCLdC_0YDQvtCy0LDQudC00LXRgA!5e0!3m2!1sru!2sru!4v1699107053821!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>            </div>
+          </form>
     </div>
-
-    <div class="row">
-        <div class="alert alert-success" role="alert">
-            A simple success alert—check it out!
-        </div>          
-    </div>
-
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
+
